# maskmytext.com

./: .cursorignore  .gitignore  Cargo.toml  README.md  diagram.md
.cursor/rules/: ci-gha.mdc  use-pnpm.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml
src/: case_utils.rs  lib.rs  text_processor.rs
tests/: web.rs
www/: CNAME  app-init.js  bootstrap.js  index.html  index.js  manifest.json  package.json  playwright.config.js  pnpm-lock.yaml  service-worker.js  sw-constants.js  sw-register.js  vitest.config.js  webpack.config.js
www/src/state/: storage.js  storage.test.js
www/src/ui/: word-chips.js  word-chips.test.js
www/styles/: main.css
www/tests/: console.spec.js  loading-visibility.spec.js  no-reload-first-load.spec.js  storage-recovery.spec.js
