[package]
name = "mask-my-text"
version = "0.1.0"
authors = ["rich <git@richardjypark.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
regex = "1.10.3"

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[profile.release]
opt-level = "s"
